(ui/Workspace) fix commit file overflow

--- a/packages/app/src/ui/Workspace/index.scss
+++ b/packages/app/src/ui/Workspace/index.scss
@@ -20,11 +20,12 @@
 		display: flex;
 		height: 100%;
 		width: 100%;
+		overflow: hidden;
 
 		&__files {
 			min-width: 300px;
 			width: 300px;
-			height: calc(100% - 57px);
+			height: 100%;
 			background-color: var(--bg-material);
 			overflow-y: auto;
 			border-right: 1px solid var(--separator-primary);
